# cpa

./: .gitlab-ci.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile.in
cmake/Modules/: CUTE.cmake
include/: numeric.h  rational.h  type_traits.h
include/__impl/: type_traits.h
test/: CMakeLists.txt  cpa_numeric_test.cpp  cpa_rational_test.cpp
test/type_traits/: CMakeLists.txt  cpa_is_negatable_test.cpp
